# MapGraphics

./: CMakeLists.txt  MapGraphicsFramework.pro  MapGraphicsRedux.pro  README  README.md
MapGraphics/: CMakeLists.txt  CircleObject.cpp  CircleObject.h  CompassWidget.cpp  CompassWidget.h  CompositeTileSource.cpp  CompositeTileSource.h  CompositeTileSourceConfigurationWidget.cpp  CompositeTileSourceConfigurationWidget.h  CompositeTileSourceConfigurationWidget.ui  GridTileSource.cpp  GridTileSource.h  LineObject.cpp  LineObject.h  MapGraphics.pro  MapGraphicsItem.cpp  MapGraphicsItem.h  MapGraphicsObject.cpp  MapGraphicsObject.h  MapGraphicsScene.cpp  MapGraphicsScene.h  MapGraphicsView.cpp  MapGraphicsView.h  MapGraphicsView.ui  MapTileLayerListModel.cpp  MapTileLayerListModel.h  MapTileSource.cpp  MapTileSource.h  MapTileSourceDelegate.cpp  MapTileSourceDelegate.h  OSMTileSource.cpp  OSMTileSource.h  PolygonObject.cpp  PolygonObject.h  Position.cpp  Position.h  TileSourceConfigurationWidget.cpp  TileSourceConfigurationWidget.h  TileSourceConfigurationWidget.ui  ZoomWidget.cpp  (+1 more)
MapGraphics/guts/: CompositeTileSourceConfigurationWidget.cpp  CompositeTileSourceConfigurationWidget.h  CompositeTileSourceConfigurationWidget.ui  Conversions.cpp  Conversions.h  MGNetworkManager.cpp  MGNetworkManager.h  MapGraphicsNetwork.cpp  MapGraphicsNetwork.h  MapGraphicsScene.cpp  MapGraphicsScene.h  MapInfoManager.cpp  MapInfoManager.h  MapQuestTileSource.cpp  MapQuestTileSource.h  MapTileGraphicsItem.cpp  MapTileGraphicsItem.h  MapTileGraphicsObject.cpp  MapTileGraphicsObject.h  MapTileLayerListModel.cpp  MapTileLayerListModel.h  MapTileSource.cpp  MapTileSource.h  PrivateQGraphicsItem.cpp  PrivateQGraphicsItem.h  PrivateQGraphicsItemParent.cpp  PrivateQGraphicsItemParent.h  PrivateQGraphicsObject.cpp  PrivateQGraphicsObject.h  PrivateQGraphicsScene.cpp  PrivateQGraphicsScene.h  PrivateQGraphicsView.cpp  PrivateQGraphicsView.h  SQLiteKeyValueStore.cpp  (+1 more)
TestApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TestApp.pro  WeatherImageObject.cpp  WeatherImageObject.h  WeatherManager.cpp  WeatherManager.h  main.cpp
(+5 files in other folders)
